--- a/Ribolov/Content/Site.css
+++ b/Ribolov/Content/Site.css
@@ -2,6 +2,8 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image: url(../Images/boat.jpg);
+    background-size: cover;
 }
 
 /* Wrapping element */
@@ -9,6 +11,15 @@ body {
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background-image: url(../Images/stap.jpg);
+    background-size: cover;
+    background-color: rgba(0,0,0,0.8);
+    background-blend-mode: darken;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 /* Set widths on the form inputs since otherwise they're 100% wide */
@@ -30,3 +41,20 @@ textarea {
     }
 }
 
+input {
+    color: white;
+    background-color: black;
+    border: 0;
+}
+
+option, select {
+    color: black;
+}
+
+.flex {
+    width: 280px;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
